[package]
name = "yew-website"
version = "0.1.0"
edition = "2024"

# [dependencies]
# yew = { version = "0.22.1", features = ["csr"] }
# yew-router = "0.20.0"
# yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] }


[dependencies]
yew = { version = "0.23", features = ["csr"] }
yew-router = "0.20"
